--- a/My Portfolio/portfolio.css
+++ b/My Portfolio/portfolio.css
@@ -191,6 +191,8 @@ nav ul li a:hover::after{
 }
 .work img{
     width: 100%;
+    width: 300px;
+    height: 300px;
     border-radius: 10px;
     display: block;
     transition: transform 0.5s;
